--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h2>
       Live dashboard for MIT CityScope Project
       <br>
-      <a href="https://github.com/CityScope/CS_CityIO_Backend" target="_blank">
-        <i class="fab fa-git-square" aria-hidden="true"></i> Click here for cityIO backend</a>
+      <!--<a href="https://github.com/CityScope/CS_CityIO_Backend" target="_blank">-->
+        <!--<i class="fab fa-git-square" aria-hidden="true"></i> Click here for cityIO backend</a>-->
     </h2>
     <br>
   </div>
