update link to scanner

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
            <!--target="_blank">-->
             <!--<i aria-hidden="true" class="fab fa-git-square"></i> Click here for-->
             <!--cityIO backend</a>-->
+        <a href="http://62.78.181.155:10080/scanner/dist"  target="_blank"><br>
+         Click here for cityIO Scanner</a>
     </h2>
     <br/>
 </div>
